just added add comment button

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -34,165 +34,11 @@
             </div>
 
             <div id="comments" class="card-footer border-secondary">
+                <a class="btn btn-primary" href="{% url 'blog:add_comment_to_post' slug=post.slug %}">Add comment</a>
                 {% include 'blog/postcomments.html' %}
             </div>
 
-        </div><!-- /.blog-post -->
-
-    {% comment %} {% if post.published_date and not post.private or not post.published_date and user.is_superuser or post.private and user.is_superuser %}
-
-        {% if post.private or not post.published_date %}
-            <div class="w3-ul w3-card-4">
-                <div class="postContainer w3-ul w3-card-4 w3-container">
-        {% else %}
-            <div class="w3-ul w3-card-4 w3-padding-bottom-8">
-                <div class="postContainer w3-ul w3-card-4 w3-padding-bottom-8 w3-container">
-        {% endif %}
-                    <div class="post">
-                        <h3 class="postTitle">
-                            {{ post.title }}
-
-                            {% block superButtons %}
-                                {% if user.is_superuser %}
-                                    <a class="w3-right" href="/admin/blog/post/{{ post.id }}/change/">
-                                        <span class="iconify khoRed" data-icon="ant-design:edit-filled" data-inline="false"></span>
-                                    </a>
-
-                                    <a class="w3-right" href="{% url 'blog:post_edit' slug=post.slug %}">
-                                        <span class="iconify" data-icon="ant-design:edit-filled" data-inline="false"></span>
-                                    </a>
-
-                                    <a class="w3-right w3-hide-small" href="{% url 'blog:post_remove' slug=post.slug %}">
-                                        <span class="iconify" data-icon="ant-design:delete-outlined" data-inline="false"></span>
-                                    </a>
-
-                                    {% if not post.published_date %}
-                                        <a class="w3-right" href="{% url 'blog:post_publish_private' slug=post.slug %}">
-                                            <span class="iconify" data-icon="foundation:folder-lock" data-inline="false"></span>
-                                        </a>
-
-                                        <a class="w3-right" href="{% url 'blog:post_publish' slug=post.slug %}">
-                                            <span class="iconify" data-icon="ic:baseline-publish" data-inline="false"></span>
-                                        </a>
-                                    {% endif %}
-
-                                {% endif %}
-                            {% endblock superButtons %}
-                        </h3>
-
-                        <div class="w3-container khoPaddingLeftM-16">
-                            <div class="date w3-Montserrat w3-col l12 w3-hide-medium w3-hide-small">
-                                <p class="postPubliDate">Created : {{ post.created_date|date:'l, d F Y' }} - {{ post.created_date|time:"G:i:s" }}</p>
-
-                                {% if post.published_date %}
-                                    <p class="postPubliDate">Published : {{ post.published_date|date:'l, d F Y' }} - {{ post.published_date|time:"G:i:s" }}</p>
-                                {% endif %}
-
-                                {% if post.modified_date %}
-                                    <p class="postPubliDate">Last Modified : {{ post.modified_date|date:'l, d F Y' }} - {{ post.modified_date|time:"G:i:s" }}</p>
-                                {% endif %}
-                            </div>
-
-                            <div class="date w3-Montserrat w3-col w3-hide-large m12 s12">
-                                <p class="postPubliDate">Created : {{ post.created_date|date:'d b Y' }}</p>
-
-                                {% if post.published_date %}
-                                    <p class="postPubliDate">Published : {{ post.published_date|date:'d b Y' }}</p>
-                                {% endif %}
-
-                                {% if post.modified_date %}
-                                    <p class="postPubliDate">Last Modified : {{ post.modified_date|date:'d b Y' }}</p>
-                                {% endif %}
-                            </div>
-                        </div>
-                    </div>
-
-                    <div id="contents" class="postText">
-                        {% if post.post_image %}
-                            <img src="{{ post.post_image.url }}" alt="" />
-                            <hr class="hr">
-                        {% endif %}
-                        {{ post.body|formatted_markdown|safe }}
-                    </div>
-                    <div class="date w3-Montserrat">
-
-                        <span class="author">Author : {{ post.author|linebreaksbr }}</span>
-
-                        {% for category in post.categories.all %}
-                            {% if not category.private or category.private and user.is_superuser %}
-                                {% if post.categories.all|length == 1 %}
-                                    <span class="w3-margin"> | </span>
-                                    <a href="{{ category.get_absolute_url }}" class="coolLinks">{{ category|capfirst }}</a>
-                                {% else %}
-
-                                    {% if forloop.first %}
-                                        <span class="w3-margin"> | </span>
-                                    {% endif %}
-
-                                    <a href="{{ category.get_absolute_url }}" class="coolLinks">{{ category|capfirst }}</a>
-
-                                    {% if forloop.revcounter0 and not category.private or category.private and user.is_superuser %}
-
-                                        {% if not forloop.last %}
-                                            <span class="w3-margin"> | </span>
-                                        {% endif %}
-                                    {% endif %}
-                                {% endif %}
-                            {% endif %}
-                        {% endfor %}
-                    </div>
-
-                </div>
-
-                {% if post.published_date and not post.private %}
-
-                    <hr class="hr" />
-
-                    <div id="comments" class="comment">
-
-                        <a class="w3-btn w3-theme-dark" href="{% url 'blog:add_comment_to_post' slug=post.slug %}">Add comment</a>
-
-                        <hr class="hr">
-
-                        {% if post.approved_comments.count or user.is_superuser %}
-                            {% for comment in post.comments.all %}
-                                {% if comment.approved_comment or not comment.approved_comment and user.is_superuser %}
-                                    <div class="w3-Montserrat">
-                                        <div>
-                                            <div class="date">
-                                                <p>
-                                                    <span class="khoWhite khoBold khoUnderline">{{ comment.author }}</span>
-                                                    <span> - </span>
-                                                    <span class="khoGray">{{ comment.created_date|date:'l, d F Y' }} - {{ comment.created_date|time:"G:i:s" }}</span>
-
-                                                    {% if not comment.approved_comment %}
-                                                        <span class="w3-right khoWhite">
-                                                            <a href="{% url 'blog:comment_remove' pk=comment.pk %}"><span class="iconify" data-icon="foundation:page-remove" data-inline="false"></span></a>
-                                                            <a href="{% url 'blog:comment_approve' pk=comment.pk %}"><span class="iconify" data-icon="emojione-monotone:ok-button" data-inline="false"></span></a>
-                                                        </span>
-                                                    {% endif %}
-                                                </p>
-                                            </div>
-
-                                            <span class="khoGray-2">{{ comment.message|formatted_markdown|safe }}</span>
-
-                                        </div>
-
-                                        {% if not forloop.last %}
-                                            <hr class="hr">
-                                        {% endif %}
-                                    </div>
-                                {% endif %}
-                            {% empty %}
-                                <p>No comments here yet.</p>
-                            {% endfor %}
-                        {% else %}
-                            <p>No comments here yet.</p>
-                        {% endif %}
-                    </div>
-                {% endif %}
-
-            </div> {% endcomment %}
+        </div>
 
     {% else %}
         <h1><a class="coolLinks" href="/pages/kheee">This post is either private or still a draft, you must be logged in to be able to see it</a></h1>
