updated the new design

--- a/blog/templates/blog/post_modale.html
+++ b/blog/templates/blog/post_modale.html
@@ -44,7 +44,7 @@
                         <p>{{ post.author }}</p>
                         <hr class="hr">
                         <h5>Dates</h5>
-                        <p>{% include 'blog/postdates.html' %}</p>
+                        {% include 'blog/postdates.html' %}
                         <hr class="hr">
                         <h5>Categories</h5>
                         <p>{% include 'blog/postcategories.html' %}</p>
