--- a/khoBlog/static/css/variables.scss
+++ b/khoBlog/static/css/variables.scss
@@ -1,5 +1,5 @@
-$palette_primary: #6358eb;
-$palette_secondary: #4a486b;
+$palette_primary: #b362ff;
+$palette_secondary: #444749;
 $palette_danger: #eb4034;
 $palette_success: #5ced4c;
 $palette_warning: #f5ef45;
@@ -7,7 +7,7 @@ $palette_info: #45def5;
 
 $palette_light: #a59fee;
 $palette_attenuation: #4c44b8;
-$palette_dark: #2c286b;
+$palette_dark: #212121;
 
 $font-family-sans-serif: 'Montserrat' !default;
 $font-family-base: $font-family-sans-serif !default;
