--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -118,7 +118,7 @@
                         <p class="blog-header-logo">{{ title }}</p>
                     </div>
                     <div class="col-6 col-sm-4 d-flex justify-content-end align-items-center">
-                        <img id="logo" width="75" src="{% static 'img/RuthinkkTooBig.png' %}" alt="Khodok's Logo" />
+                        <img id="logo" height="75" src="{% static 'img/RuthinkkTooBig.png' %}" alt="Khodok's Logo" />
                     </div>
                 </div>
             </header>
