--- a/blog/templates/blog/add_comment_to_post.html
+++ b/blog/templates/blog/add_comment_to_post.html
@@ -1,20 +1,15 @@
 {% extends 'blog/base_post.html' %}
+{% load bootstrap4 %}
 {% load markdown_extra %}
 
-
-{% block title %}
-    Add Comment
-{% endblock title %}
-
 {% block main %}
-    <div id="posts" class="w3-ul w3-threequarter">
-        <h2>New Comment</h2>
-        <form method="POST" class="w3-card-4 w3-padding-16 w3-padding-sides-16">{% csrf_token %}
-            {{ form.as_p }}
-
-            <br />
-            <button type="submit" class="w3-btn w3-theme-dark">Send</button>
-        </form>
-    </div>
+    <h2>New Comment</h2>
+    <form method="POST" class="form">
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        {% buttons %}
+            <button type="submit" class="btn btn-primary">Submit</button>
+        {% endbuttons %}
+    </form>
     {{ form.media }}
 {% endblock main %}
