--- a/blog/templates/blog/post_new.html
+++ b/blog/templates/blog/post_new.html
@@ -1,13 +1,15 @@
 {% extends 'blog/base_post.html' %}
+{% load bootstrap4 %}
 {% load markdown_extra %}
 
 {% block main %}
     <h2>New Post</h2>
-    <form method="POST" enctype="multipart/form-data" class="w3-card-4 w3-padding-16 w3-padding-sides-16">{% csrf_token %}
-        {{ form.as_p }}
-
-        <br />
-        <button type="submit" class="w3-btn w3-theme-dark">Save</button>
+    <form method="POST" enctype="multipart/form-data" class="form">
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        {% buttons %}
+            <button type="submit" class="btn btn-primary">Save</button>
+        {% endbuttons %}
     </form>
     {{ form.media }}
 
