forms and users

--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -157,6 +157,7 @@
                                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                                     <div class="btn-group mb-2" role="group" aria-label="Group Account">
                                         <a class="mb-0 btn btn-primary" href="{% url 'account_logout' %}">Log out</a>
+                                        <a class="mb-0 btn btn-primary" href="{% url 'profile' %}">Profile Page</a>
                                     </div>
 
                                     <div class="btn-group mb-2" role="group" aria-label="Group Posts">
@@ -181,6 +182,7 @@
                                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                                     <div class="btn-group mb-2" role="group" aria-label="Group Account">
                                         <a class="mb-0 btn btn-primary" href="{% url 'account_logout' %}">Log out</a>
+                                        <a class="mb-0 btn btn-primary" href="{% url 'profile' %}">Profile Page</a>
                                     </div>
 
                                     <div class="btn-group mb-2" role="group" aria-label="Group Categories">
@@ -196,6 +198,7 @@
                                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                                     <div class="btn-group mb-2" role="group" aria-label="Group Account">
                                         <a class="mb-0 btn btn-primary" href="{% url 'account_logout' %}">Log out</a>
+                                        <a class="mb-0 btn btn-primary" href="{% url 'profile' %}">Profile Page</a>
                                     </div>
 
                                     <div class="btn-group mb-2" role="group" aria-label="Group Categories">
