--- a/khoBlog/templates/account/login.html
+++ b/khoBlog/templates/account/login.html
@@ -1,12 +1,10 @@
-{% extends 'blog/base_post.html' %}
+{% extends "base.html" %}
 {% load bootstrap4 %}
-{% load markdown_extra %}
 
-{% block page_head %}
-{% endblock page_head %}
+{% block title %} - Login{% endblock title %}
 
-{% block main %}
-    <h2>New Post</h2>
+{% block content %}
+    <h2>Login</h2>
     <form method="POST" enctype="multipart/form-data" class="form">
         {% csrf_token %}
         {% bootstrap_form form %}
@@ -14,6 +12,4 @@
             <button type="submit" class="btn btn-primary">Save</button>
         {% endbuttons %}
     </form>
-    {{ form.media }}
-
-{% endblock main %}
+{% endblock content %}
