--- a/khoBlog/templates/account/profile.html
+++ b/khoBlog/templates/account/profile.html
@@ -6,10 +6,14 @@
 
 {% block content %}
     <h2>Profile</h2>
+    <h2>{% user_display user %}'s Profile
     {% if user.profile_pic %}
-        <h2>{% user_display user %}'s Profile <img src="{{ user.profile_pic.url }}" alt="profile pic" width="50"/></h2>
+        <img src="{{ user.profile_pic.url }}" alt="profile pic" width="50"/>
     {% endif %}
+    </h2>
 
     <a class="mb-3 btn btn-primary" href="{% url 'edit_profile' %}">Edit Profile</a>
+    <br>
+    <a class="mb-3 btn btn-primary" href="{% url 'edit_connections' %}">Edit Connections</a>
 
 {% endblock content %}
