--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -213,6 +213,7 @@
                                     <a class="mb-0 btn btn-primary" href="{% url 'account_signup' %}">Sign Up</a>
                                     <a class="mb-0 btn btn-primary" href="{% url 'account_login' %}">Login</a>
                                     <a class="mb-0 btn btn-primary" href="{% provider_login_url 'google' %}"><span class="iconify" data-icon="icomoon-free:google" data-inline="false"></span></a>
+                                    <a class="mb-0 btn btn-primary" href="{% provider_login_url 'discord' %}"><span class="iconify" data-icon="fa-brands:discord" data-inline="false"></span></a>
                                 </div>
 
                                 <div class="btn-group mb-2" role="group" aria-label="Group Categories">
