--- a/blog/templates/blog/base_post.html
+++ b/blog/templates/blog/base_post.html
@@ -42,17 +42,20 @@
             {% else %}
                 <!-- Primary Meta Tags -->
                 <meta name="title" content="Private or draft">
-                <meta name="description" content="This post is either private or still a draft, you must be logged in to be able to see it">
+                <meta name="description"
+                      content="This post is either private or still a draft, you must be logged in to be able to see it">
 
                 <!-- Open Graph / Facebook -->
                 <meta property="og:url" content="/pages/kheee">
                 <meta property="og:title" content="Private or draft">
-                <meta property="og:description" content="This post is either private or still a draft, you must be logged in to be able to see it">
+                <meta property="og:description"
+                      content="This post is either private or still a draft, you must be logged in to be able to see it">
 
                 <!-- Twitter -->
                 <meta property="twitter:url" content="/pages/kheee">
                 <meta property="twitter:title" content="Private or draft">
-                <meta property="twitter:description" content="This post is either private or still a draft, you must be logged in to be able to see it">
+                <meta property="twitter:description"
+                      content="This post is either private or still a draft, you must be logged in to be able to see it">
             {% endif %}
 
         {% elif view_name == 'blog:post_category_list' %}
@@ -103,13 +106,16 @@
 
         {% else %}
             <!-- Primary Meta Tags -->
-            <meta name="description" content="Khodok's Blog was a simple test for Django for school at first before Khodok (the dev of this stupid website) started to like it and continued it as a personal project">
+            <meta name="description"
+                  content="Khodok's Blog was a simple test for Django for school at first before Khodok (the dev of this stupid website) started to like it and continued it as a personal project">
 
             <!-- Open Graph / Facebook -->
-            <meta property="og:description" content="Khodok's Blog was a simple test for Django for school at first before Khodok (the dev of this stupid website) started to like it and continued it as a personal project">
+            <meta property="og:description"
+                  content="Khodok's Blog was a simple test for Django for school at first before Khodok (the dev of this stupid website) started to like it and continued it as a personal project">
 
             <!-- Twitter -->
-            <meta property="twitter:description" content="Khodok's Blog was a simple test for Django for school at first before Khodok (the dev of this stupid website) started to like it and continued it as a personal project">
+            <meta property="twitter:description"
+                  content="Khodok's Blog was a simple test for Django for school at first before Khodok (the dev of this stupid website) started to like it and continued it as a personal project">
         {% endif %}
     {% endwith %}
 
