--- a/blog/templates/blog/post_modale.html
+++ b/blog/templates/blog/post_modale.html
@@ -3,20 +3,24 @@
         <div class="modal-content bg-dark">
             <ul class="nav nav-tabs" id="postModalTab-{{ post.id }}" role="tablist">
                 <li class="nav-item" role="presentation">
-                    <a class="nav-link active" id="post-tab-{{ post.id }}" data-toggle="tab" href="#post-{{ post.id }}" role="tab" aria-controls="post" aria-selected="true">Post</a>
+                    <a class="nav-link active" id="post-tab-{{ post.id }}" data-toggle="tab" href="#post-{{ post.id }}"
+                       role="tab" aria-controls="post" aria-selected="true">Post</a>
                 </li>
 
                 <li class="nav-item" role="presentation">
-                    <a class="nav-link" id="info-tab-{{ post.id }}" data-toggle="tab" href="#info-{{ post.id }}" role="tab" aria-controls="info" aria-selected="false">Information</a>
+                    <a class="nav-link" id="info-tab-{{ post.id }}" data-toggle="tab" href="#info-{{ post.id }}"
+                       role="tab" aria-controls="info" aria-selected="false">Information</a>
                 </li>
 
                 <li class="nav-item" role="presentation">
-                    <a class="nav-link" id="comments-tab-{{ post.id }}" data-toggle="tab" href="#comments-{{ post.id }}" role="tab" aria-controls="comments" aria-selected="false">Comments</a>
+                    <a class="nav-link" id="comments-tab-{{ post.id }}" data-toggle="tab" href="#comments-{{ post.id }}"
+                       role="tab" aria-controls="comments" aria-selected="false">Comments</a>
                 </li>
             </ul>
 
             <div class="tab-content" id="postModalContent-{{ post.id }}">
-                <div class="tab-pane fade show active" id="post-{{ post.id }}" role="tabpanel" aria-labelledby="post-tab">
+                <div class="tab-pane fade show active" id="post-{{ post.id }}" role="tabpanel"
+                     aria-labelledby="post-tab">
                     <div class="modal-header">
                         <h5 class="modal-title">{{ post.title }} - #{{ post.id }}</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -32,7 +36,8 @@
                     </div>
                 </div>
 
-                <div class="tab-pane fade" id="info-{{ post.id }}" role="tabpanel" aria-labelledby="info-tab-{{ post.id }}">
+                <div class="tab-pane fade" id="info-{{ post.id }}" role="tabpanel"
+                     aria-labelledby="info-tab-{{ post.id }}">
                     <div class="modal-header">
                         <h5 class="modal-title">{{ post.title }} - #{{ post.id }} - Information</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -53,7 +58,8 @@
                     </div>
                 </div>
 
-                <div class="tab-pane fade" id="comments-{{ post.id }}" role="tabpanel" aria-labelledby="comments-tab-{{ post.id }}">
+                <div class="tab-pane fade" id="comments-{{ post.id }}" role="tabpanel"
+                     aria-labelledby="comments-tab-{{ post.id }}">
 
                     <div class="modal-header">
                         <h5 class="modal-title">{{ post.title }} - #{{ post.id }} - Comments</h5>
