--- a/blog/templates/blog/postdates.html
+++ b/blog/templates/blog/postdates.html
@@ -1,12 +1,15 @@
 <div class="d-none d-xl-block">
-    <p class="postPubliDate">Created : {{ post.created_date|date:'l, d F Y' }} - {{ post.created_date|time:"G:i:s" }}</p>
+    <p class="postPubliDate">Created : {{ post.created_date|date:'l, d F Y' }}
+        - {{ post.created_date|time:"G:i:s" }}</p>
 
     {% if post.published_date %}
-        <p class="postPubliDate">Published : {{ post.published_date|date:'l, d F Y' }} - {{ post.published_date|time:"G:i:s" }}</p>
+        <p class="postPubliDate">Published : {{ post.published_date|date:'l, d F Y' }}
+            - {{ post.published_date|time:"G:i:s" }}</p>
     {% endif %}
 
     {% if post.modified_date %}
-        <p class="postPubliDate">Last Modified : {{ post.modified_date|date:'l, d F Y' }} - {{ post.modified_date|time:"G:i:s" }}</p>
+        <p class="postPubliDate">Last Modified : {{ post.modified_date|date:'l, d F Y' }}
+            - {{ post.modified_date|time:"G:i:s" }}</p>
     {% endif %}
 </div>
 
