--- a/khoBlog/static/css/custom.scss
+++ b/khoBlog/static/css/custom.scss
@@ -11,4 +11,6 @@ $dark: $palette_dark;
 
 $font-family: $font-family-base;
 
+$enabled-shadows: $enable-shadows;
+
 @import '../../../node_modules/bootstrap/scss/bootstrap';
