--- a/khoBlog/static/css/variables.scss
+++ b/khoBlog/static/css/variables.scss
@@ -9,5 +9,7 @@ $palette_light: #a59fee;
 $palette_attenuation: #4c44b8;
 $palette_dark: #212121;
 
+$enable-shadows: true;
+
 $font-family-sans-serif: 'Montserrat' !default;
 $font-family-base: $font-family-sans-serif !default;
