--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -68,7 +68,6 @@
     <meta property="twitter:image" content="{% static 'img/RuthinkkTooBig.png' %}">
 
     <!-- Bootstrap CSS -->
-    {% comment %} <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> {% endcomment %}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
@@ -112,6 +111,7 @@
 
         <!-- rel! Fonts / Icons -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet"/>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
 
         <!-- rel! Themes -->
         <link rel="stylesheet" href="{% static 'css/Themes/dark-theme/dark-theme.css' %}">
